Added mini histogram

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -191,6 +191,7 @@ body{
   filter: drop-shadow(0 1px 2px rgb(0 0 0 / 0.1));
   border-radius: 5px;
   padding: 36px 64px;
+  width: 500px;
 }
 
 /*
